Fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -413,7 +413,6 @@ section[role="region"] {
         margin: 0;
         flex-direction: row;
         height: 2.75em;
-        overflow: hidden;
     }
     .navbar-nav {
         display: flex;
